--- a/src/app.html
+++ b/src/app.html
@@ -3,12 +3,20 @@
   <head>
     <title>MIND Math</title>
     <meta charset="utf-8" />
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Website that practice your fundamental mathematics skills"
+    />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %svelte.head%
   </head>
   <body>
-    <div id="svelte">%svelte.body%</div>
+    <div
+      id="svelte"
+      class="text-center bg-sky-50 min-h-screen pb-12 overflow-x-hidden"
+    >
+      %svelte.body%
+    </div>
   </body>
 </html>
