Add Game Control Draft

--- a/src/app.html
+++ b/src/app.html
@@ -8,14 +8,15 @@
       content="Website that practice your fundamental mathematics skills"
     />
     <link rel="icon" href="/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Inter"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %svelte.head%
   </head>
   <body>
-    <div
-      id="svelte"
-      class="text-center bg-sky-50 min-h-screen pb-12 overflow-x-hidden"
-    >
+    <div id="svelte" class="text-center bg-sky-50 overflow-x-hidden">
       %svelte.body%
     </div>
   </body>
