--- a/src/app.html
+++ b/src/app.html
@@ -13,11 +13,9 @@
       href="https://fonts.googleapis.com/css?family=Inter"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    %svelte.head%
+    %sveltekit.head%
   </head>
-  <body>
-    <div id="svelte" class="text-center bg-sky-50 overflow-x-hidden">
-      %svelte.body%
-    </div>
+  <body class="text-center overflow-x-hidden">
+    %sveltekit.body%
   </body>
 </html>
