Refactor Part 2, UI, Dark Mode, Mechanics

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
       name="description"
       content="Website that practice your fundamental mathematics skills"
     />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="https://i.imgflip.com/3qb5l2.png" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Inter"
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
-  <body class="text-center overflow-x-hidden">
-    %sveltekit.body%
+  <body>
+    <div class="text-center overflow-x-hidden relative">%sveltekit.body%</div>
   </body>
 </html>
