Variable Difficulty & KaTeX

--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,6 @@
     %sveltekit.head%
   </head>
   <body>
-    <div class="text-center overflow-x-hidden relative">%sveltekit.body%</div>
+    <div class="relative overflow-x-hidden text-center">%sveltekit.body%</div>
   </body>
 </html>
